twenty two commit

--- a/index.html
+++ b/index.html
@@ -197,6 +197,37 @@
                 </div>
             </div>
         </section>
+        <!-- skills section start -->
+        <section id="skills" class="skills-section">
+            <div class="container">
+                <div class="logos">
+                    <div class="logo">
+                        <img src="/logos/2993708_adobe_brand_brands_illustrator_logo_icon.png" style="width: 100px;" alt="">
+                    </div>
+                    <div class="logo">
+                        <img src="/logos/4373282_adobe_logo_logos_photoshop_icon.png"  style="width: 100px;" alt="">
+                    </div>
+                    <div class="logo">
+                        <img src="/logos/294692_css3_icon.png"  style="width: 100px;" alt="">
+                    </div>
+                    <div class="logo">
+                        <img src="/logos/317755_badge_html_html5_achievement_award_icon.png"  style="width: 100px;" alt="">
+                    </div>
+                    <div class="logo">
+                        <img src="/logos/icons8-bootstrap-48.png"  style="width: 100px;" alt="">
+                    </div>
+                    <div class="logo">
+                        <img src="/logos/4373291_adobe_audition_logo_logos_icon.png"  style="width: 100px;" alt="">
+                    </div>
+                    <div class="logo">
+                        <img src="/logos/289514_adobe_design_premiere pro_premiere pro icon_premiere pro logo_icon.png"  style="width: 100px;" alt="">
+                    </div>
+                    <div class="logo">
+                        <img src="/logos/4373058_adobe_animate_logo_logos_icon.png"  style="width: 100px;" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- portfolio section start -->
         <section id="portfolio" class="portfolio-sec pt-5">
             <h1 class="text-center text-white">Portfolio</h1>
