twenty three commit

--- a/index.html
+++ b/index.html
@@ -199,8 +199,9 @@
         </section>
         <!-- skills section start -->
         <section id="skills" class="skills-section">
+            <h2 class="text-center text-white">Skills</h2>
             <div class="container">
-                <div class="logos">
+                <div class="logos pb-5">
                     <div class="logo">
                         <img src="/logos/2993708_adobe_brand_brands_illustrator_logo_icon.png" style="width: 100px;" alt="">
                     </div>
@@ -279,31 +280,12 @@
     <footer class="footer " id="footer-section">
         <div class="footer-item">
             <div class="container pt-5">
-                <div class="row">
-                    <div class="personal-info col-lg-4 col-md-6 col-sm-12">
-                        <h3 class="text-white">Lily Chakma</h3>
-                        <p class="text-white">A Graphics Designer, Web developer and a animator</p>
-                    </div>
-                    <div class="footer-link col-lg-4 col-md-6 col-sm-12">
-                        <h3 class="text-white">Permalinks</h3>
-                        <div><a href="">Home</a></div>
-                        <div><a href="">About</a></div>
-                        <div><a href="">Sample</a></div>
-                        <div><a href="">Contact</a></div>
-                    </div>
-                    <div class="privacy col-lg-4 col-md-6 col-sm-12">
-                        <h3 class="text-white">Privacy</h3>
-                       <div> <a href="">Privacy and Policy</a></div>
-                        <div><a href="">Terms and Conditions</a></div>
-                        <div><a href="">Refund Policy</a></div>
-                    </div>
-                </div>
             </div>
-        </div>
-        <hr class="text-white">
-        <div class=" copyright text-white text-center">
-         copyright © by lily chakma
-        </div>
+            <hr class="text-white">
+            <div class=" copyright text-white text-center">
+             copyright © by lily chakma
+            </div>
+            </div>
     </footer>
     <!-- footer section end -->
     <script src="/bootstrap/js/bootstrap.min.js"></script>
