twenty four commit

--- a/index.html
+++ b/index.html
@@ -270,6 +270,11 @@
                       <div>
                         <button type="button" class="btn text-white bg-info">Send</button>
                       </div>
+                      <div class="icon mt-5">
+                
+                        <a href=""><img src="/logos/5296499_fb_facebook_facebook logo_icon.png" alt=""></a>
+                        <a href=""><img src="/logos/3225191_app_instagram_logo_media_popular_icon.png" alt=""></a>
+                    </div>
                     </div>
                 </div>
             </div>
@@ -280,12 +285,13 @@
     <footer class="footer " id="footer-section">
         <div class="footer-item">
             <div class="container pt-5">
-            </div>
-            <hr class="text-white">
-            <div class=" copyright text-white text-center">
-             copyright © by lily chakma
-            </div>
-            </div>
+                <hr class="text-white">
+                <div class=" copyright text-white text-center">
+                    copyright © by lily chakma
+                </div>
+            </div> <br> <br>
+           
+        </div>
     </footer>
     <!-- footer section end -->
     <script src="/bootstrap/js/bootstrap.min.js"></script>
