--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- main section start -->
     <main>
         <nav class="navbar navbar-expand-lg fixed-top">
-            <div class="container">
+            <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="/logo/104.logo-rgb-final.png" alt="" style="width: 4vw;"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -49,9 +49,9 @@
         <section id="home" class="first-section">
             <div class="container text-center">
                <div class="row">
-                <div class="welcome col-lg-12 col-md-12 col-sm-12">
-                    <h1 class="text-white mt-5" data-aos="fade-up">Welcome To My</h1>
-                    <h1 class="text-white" data-aos="fade-up">Portfolio</h1>
+                <div class="welcome col-lg-12 col-md-12 col-sm-12 p-0">
+                    <h1 class="text-white mt-5 p-0" data-aos="fade-up">Welcome To My</h1>
+                    <h1 class="text-white p-0" data-aos="fade-up">Portfolio</h1>
                 </div>
                </div>
             </div>
@@ -69,8 +69,8 @@
                         <div class="about" data-aos="fade-up">
                             <h4 class="text-white">Hello</h4><h5 class="text-white">I am</h5> <h1 class="">Lily Chakma</h1>
                             <span class="text-white">A graphic designer. But apart from graphics design I work in web site design, animation, audio-video editing etc sectors. I prioritize honesty and punctuality in my work.</span>
-                            <div class=" hire-me" data-aos="fade-up">
-                                <a class=" btn rounded-pill text-dark fs-5 bg-white mt-5" href="">Hire me</a>
+                            <div class="hire-me" data-aos="fade-up">
+                                <a class=" btn rounded-pill text-dark fs-5 bg-white mt-4" href="">Hire me</a>
                             </div>
                         </div>
                         
@@ -289,7 +289,7 @@
                 <div class=" copyright text-white text-center">
                     copyright © by lily chakma
                 </div>
-            </div> <br> <br>
+            </div>
            
         </div>
     </footer>
