twenty six commit

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <!-- services section end -->
         <!-- previous section start -->
         <section id="sample" class="sample-sec">
-            <h1 class="text-center text-white pt-5">My Previous Works</h1>
+            <h1 class="text-center text-white pt-5" data-aos="fade-up">My Previous Works</h1>
             <div class="container previous-work d-grid pb-5 pt-5">
                 <div class="card2" data-tilt="" style="width: 18rem;" data-aos="fade-up">
                     <img src="/images/104. mask-baby.jpg" class="card-img-top" alt="...">
@@ -199,31 +199,31 @@
         </section>
         <!-- skills section start -->
         <section id="skills" class="skills-section">
-            <h2 class="text-center text-white">Skills</h2>
+            <h2 class="text-center text-white"  data-aos="fade-up">Skills</h2>
             <div class="container">
                 <div class="logos pb-5">
-                    <div class="logo">
+                    <div class="logo" data-aos="fade-up">
                         <img src="/logos/2993708_adobe_brand_brands_illustrator_logo_icon.png" style="width: 100px;" alt="">
                     </div>
-                    <div class="logo">
+                    <div class="logo"  data-aos="fade-up">
                         <img src="/logos/4373282_adobe_logo_logos_photoshop_icon.png"  style="width: 100px;" alt="">
                     </div>
-                    <div class="logo">
+                    <div class="logo"  data-aos="fade-up">
                         <img src="/logos/294692_css3_icon.png"  style="width: 100px;" alt="">
                     </div>
-                    <div class="logo">
+                    <div class="logo"  data-aos="fade-up">
                         <img src="/logos/317755_badge_html_html5_achievement_award_icon.png"  style="width: 100px;" alt="">
                     </div>
-                    <div class="logo">
+                    <div class="logo"  data-aos="fade-up">
                         <img src="/logos/icons8-bootstrap-48.png"  style="width: 100px;" alt="">
                     </div>
-                    <div class="logo">
+                    <div class="logo"  data-aos="fade-up">
                         <img src="/logos/4373291_adobe_audition_logo_logos_icon.png"  style="width: 100px;" alt="">
                     </div>
-                    <div class="logo">
+                    <div class="logo"  data-aos="fade-up">
                         <img src="/logos/289514_adobe_design_premiere pro_premiere pro icon_premiere pro logo_icon.png"  style="width: 100px;" alt="">
                     </div>
-                    <div class="logo">
+                    <div class="logo"  data-aos="fade-up">
                         <img src="/logos/4373058_adobe_animate_logo_logos_icon.png"  style="width: 100px;" alt="">
                     </div>
                 </div>
@@ -231,24 +231,24 @@
         </section>
         <!-- portfolio section start -->
         <section id="portfolio" class="portfolio-sec pt-5">
-            <h1 class="text-center text-white">Portfolio</h1>
+            <h1 class="text-center text-white"  data-aos="fade-up">Portfolio</h1>
             <div class="port d-grid">
-                    <div class="projects" >
+                    <div class="projects"  data-aos="fade-up">
                         <img class="img-fluid w-100" src="/images/glob.jpg" alt="">
                     </div>
-                    <div class="projects" >
+                    <div class="projects"  data-aos="fade-up">
                         <img class="img-fluid w-100" src="/portfolio/Capture2(2).PNG" alt="" >
                     </div>
-                    <div class="projects">
+                    <div class="projects"  data-aos="fade-up">
                         <img class="img-fluid w-100" src="/images/104. Hot-tea-cup.jpg" alt="" >
                     </div>
-                    <div class="project">
+                    <div class="project" data-aos="fade-up">
                         <img class="img-fluid w-100" src="/images/writing on face2.jpg" alt="">
                     </div>
-                    <div class="project">
+                    <div class="project"  data-aos="fade-up">
                         <img class="img-fluid w-100" src="/images/fish in water.jpg" alt="" >
                     </div>
-                    <div class="project">
+                    <div class="project"  data-aos="fade-up">
                         <img class="img-fluid w-100" src="/images/circle.jpg" alt="">
                     </div>
             </div>
@@ -257,7 +257,7 @@
          <!-- contact section start -->
         <section id="contact" class="contact-section pb-5 pt-5">
             <div class="container form-section pb-5">
-                <div class="form">
+                <div class="form"  data-aos="fade-up">
                     <h3 class="text-white text-center">Contact Form</h3>
                     <div class="mb-3">
                         <label for="exampleFormControlInput1" class="form-label text-white"> Name</label>
