twenty seven commit

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="/logo/104.logo-rgb-final.png" alt="" style="width: 4vw;"></a>
+                <a class="navbar-brand logo" href="#"><img src="/logo/104.logo-rgb-final.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -68,7 +68,9 @@
                     <div class="col-lg-6 col-md-6 col-sm-12" data-aos="fade-up">
                         <div class="about" data-aos="fade-up">
                             <h4 class="text-white">Hello</h4><h5 class="text-white">I am</h5> <h1 class="">Lily Chakma</h1>
-                            <span class="text-white">A graphic designer. But apart from graphics design I work in web site design, animation, audio-video editing etc sectors. I prioritize honesty and punctuality in my work.</span>
+                            <div class="about-span">
+                                <span class="text-white">A graphic designer. But apart from graphics design I work in web site design, animation, audio-video editing etc sectors. I prioritize honesty and punctuality in my work.</span>
+                            </div>
                             <div class="hire-me" data-aos="fade-up">
                                 <a class=" btn rounded-pill text-dark fs-5 bg-white mt-4" href="">Hire me</a>
                             </div>
@@ -175,7 +177,7 @@
                     <img src="/images/104. mask-baby.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title text-center mt-2 text-white">Graphics Design</h5>
-                        <p class="card-text text-center p-3 text-white">I have done web design as well as graphics design. Locally I have worked as a graphic designer in a few companies and have been able to produce good output.
+                        <p class="card-text text-center p-3 text-white">I have done graphics design. Locally I have worked as a graphic designer in a few companies and have been able to produce good output.
                         </p>
                     </div>
                 </div>
@@ -183,7 +185,7 @@
                     <img src="/images/Video-editing-software.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title text-center mt-2 text-white">Video Editing</h5>
-                        <p class="card-text text-center p-3 text-white">I have done web design as well as graphics design. Locally I have worked as a graphic designer in a few companies and have been able to produce good output.
+                        <p class="card-text text-center p-3 text-white">I have done Video Editing as well as graphics design. Locally I have worked as a graphic designer in a few companies and have been able to produce good output.
                         </p>
                     </div>
                 </div>
@@ -191,7 +193,7 @@
                     <img src="/portfolio/Capture3(3).PNG" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title text-center mt-2 text-white">Web Design</h5>
-                        <p class="card-text text-center p-3 text-white">I have done web design as well as graphics design. Locally I have worked as a graphic designer in a few companies and have been able to produce good output.
+                        <p class="card-text text-center p-3 text-white">I have done web design as well as other sections. Locally I have worked as a graphic designer in a few companies and have been able to produce good output.
                         </p>
                     </div>
                 </div>
@@ -270,11 +272,11 @@
                       <div>
                         <button type="button" class="btn text-white bg-info">Send</button>
                       </div>
-                      <div class="icon mt-5">
+                        <div class="icon mt-5">
                 
-                        <a href=""><img src="/logos/5296499_fb_facebook_facebook logo_icon.png" alt=""></a>
-                        <a href=""><img src="/logos/3225191_app_instagram_logo_media_popular_icon.png" alt=""></a>
-                    </div>
+                            <a href="https://www.facebook.com/profile.php?id=100086392243850" target="_blank"><img src="/logos/5296499_fb_facebook_facebook logo_icon.png" alt=""></a>
+                            <a href=""><img src="/logos/3225191_app_instagram_logo_media_popular_icon.png" alt=""></a>
+                        </div>
                     </div>
                 </div>
             </div>
