thrity one commit

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                 <span class="text-white">A graphic designer. But apart from graphics design I work in web site design, animation, audio-video editing etc sectors. I prioritize honesty and punctuality in my work.</span>
                             </div>
                             <div class="hire-me" data-aos="fade-up">
-                                <a class=" btn rounded-pill text-dark fs-5 bg-white mt-4" href="https://cheery-cheesecake-c99718.netlify.app/" target="_blank">Hire me</a>
+                                <a class=" btn rounded-pill text-dark fs-5 bg-white mt-4" href="https://cheery-cheesecake-c99718.netlify.app/" target="_blank">Contact-me</a>
                             </div>
                         </div>
                         
