thirty five commit

--- a/index.html
+++ b/index.html
@@ -59,11 +59,13 @@
         <!-- home section end -->
         <!-- about section start -->
         <section id="about" class="about-section">
-            <h2 class="text-center text-white" data-aos="fade-up">About</h2>
+            <div class="heading">
+                <h2 class="text-center text-white" data-aos="fade-up">About</h2>
+            </div>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12" data-aos="fade-up">
-                        <img src="/images/lily2-removebg-preview.png" alt="">
+                        <img src="/images/lily-removebg-preview.png" alt="">
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12" data-aos="fade-up">
                         <div class="about" data-aos="fade-up">
@@ -275,7 +277,7 @@
                         <div class="icon mt-5">
                 
                             <a href="https://www.facebook.com/profile.php?id=100086392243850" target="_blank"><img src="/logos/5296499_fb_facebook_facebook logo_icon.png" alt=""></a>
-                            <a href=""><img src="/logos/3225191_app_instagram_logo_media_popular_icon.png" alt=""></a>
+                            
                         </div>
                     </div>
                 </div>
