thirty six commt

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                 <span class="text-white">A graphic designer. But apart from graphics design I work in web site design, animation, audio-video editing etc sectors. I prioritize honesty and punctuality in my work.</span>
                             </div>
                             <div class="hire-me" data-aos="fade-up">
-                                <a class=" btn rounded-pill text-dark fs-5 bg-white mt-4" href="https://forms.gle/H77jHiSPqGMjdJsH7" target="_blank">Contact-me</a>
+                                <a class=" btn rounded-pill text-dark fs-5 bg-white mt-4" href="https://forms.gle/ktP1HDSYq7XoScM38" target="_blank">Contact-me</a>
                             </div>
                         </div>
                         
@@ -272,7 +272,9 @@
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                       </div>
                       <div>
-                        <button type="button" class="btn text-white bg-info">Send</button>
+                        <a href="https://forms.gle/wLuTwFgn9TgrLN2M9" target="_blank">
+                            <button type="button" class="btn text-white bg-info">Send</button>
+                        </a>
                       </div>
                         <div class="icon mt-5">
                 
